frontend: fix market layout shift
Marketplace jumped slight up and down when selecting different tabs.

Fixed and simplified container elements in marketplace.

--- a/frontends/web/src/routes/market/market.module.css
+++ b/frontends/web/src/routes/market/market.module.css
@@ -22,6 +22,5 @@
 
 .offeringContainer {
     line-height: 1.5;
-    min-height: 400px;
     margin-top: var(--space-quarter);
 }
